statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mstream
  labels:
    app: mstream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mstream
  template:
    metadata:
      labels:
        app: mstream
    spec:
      containers:
        - name: mstream
          image: linuxserver/mstream:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: music-storage
              mountPath: /music
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: music-storage
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
