service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mstream
spec:
  selector:
    app: mstream
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
