ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mstream-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: lucasg2-mstream.my.kube.um.edu.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mstream-service
                port:
                  number: 80
